IMTEPD-362: implemented SQL caching, started leader election